@@ -1,4 +1,5 @@
-- Fix wrong link in Python quick reference.
+ - Added cpp unit test for GenericVector::operator{-,+,*,/}= for all la backends
+ - Fix wrong link in Python quick reference.
 1.0.0 [2011-12-07]
  - Recompile all forms with FFC 1.0.0
  - Fix for CGAL 3.9 on OS X
